Add auto-module loading in the most hacky way possible.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "better-sqlite3": "^7.1.0",
     "irc-framework": "^4.9.0",
+    "require-dir": "^1.2.0",
     "winston": "^3.3.3",
     "winston-timestamp-colorize": "^1.1.0"
   }
