Add sqlite requirement!

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "WTFPL",
   "dependencies": {
     "babel-eslint": "^10.1.0",
-    "better-sqlite3": "^7.1.0",
+    "better-sqlite3": "^7.1.1",
     "eslint": "^7.13.0",
     "glob": "^7.1.6",
+    "irc-colors": "^1.5.0",
     "irc-framework": "^4.9.0",
     "prettier": "^2.1.2",
     "require-dir": "^1.2.0",
