--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   "dependencies": {
     "babel-eslint": "^10.1.0",
     "better-sqlite3": "^7.1.1",
-    "eslint": "^7.13.0",
     "glob": "^7.1.6",
     "irc-colors": "^1.5.0",
     "irc-framework": "^4.9.0",
+    "moment": "^2.29.1",
     "prettier": "^2.1.2",
     "require-dir": "^1.2.0",
     "winston": "^3.3.3",
     "winston-timestamp-colorize": "^1.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/eslint-parser": "^7.12.1",
+    "eslint": "^7.13.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-unicorn": "^23.0.0",
+    "esprima": "^4.0.1"
   }
 }
