--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@babel/core": "^7.12.3",
     "@babel/eslint-parser": "^7.12.1",
     "eslint": "^7.13.0",
+    "eslint-plugin-align-assignments": "^1.1.2",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.1",
     "eslint-plugin-unicorn": "^23.0.0",
     "esprima": "^4.0.1"
   }
