--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "babel-eslint": "^10.1.0",
     "better-sqlite3": "^7.1.1",
     "glob": "^7.1.6",
+    "googleapis": "^66.0.0",
+    "ini": "^1.3.5",
     "irc-colors": "^1.5.0",
     "irc-framework": "^4.9.0",
     "moment": "^2.29.1",
     "prettier": "^2.1.2",
     "require-dir": "^1.2.0",
+    "url-parse": "^1.4.7",
     "winston": "^3.3.3",
     "winston-timestamp-colorize": "^1.1.0"
   },
