--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-eslint": "^10.1.0",
     "better-sqlite3": "^7.1.1",
+    "colors": "^1.4.0",
     "glob": "^7.1.6",
     "googleapis": "^66.0.0",
     "ini": "^1.3.5",
