--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "colors": "^1.4.0",
     "glob": "^7.1.6",
     "googleapis": "^66.0.0",
+    "imgur": "^0.3.1",
     "ini": "^1.3.5",
     "irc-colors": "^1.5.0",
     "irc-framework": "^4.9.0",
     "moment": "^2.29.1",
     "prettier": "^2.1.2",
+    "request": "^2.88.2",
     "url-parse": "^1.4.7",
     "winston": "^3.3.3",
     "winston-timestamp-colorize": "^1.1.0"
