--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "ini": "^1.3.8",
     "irc-colors": "^1.5.0",
     "irc-framework": "^4.9.0",
+    "lastfm": "^0.9.3",
     "moment": "^2.29.1",
     "prettier": "^2.2.1",
     "request": "^2.88.2",
+    "snoowrap": "^1.22.0",
     "twitter": "^1.7.1",
     "url-parse": "^1.4.7",
     "winston": "^3.3.3",
